# choraleGPT-preprocessing

./: .gitignore  Arguments.cpp  Arguments.h  CMakeLists.txt  Chorale.cpp  Chorale.h  Part.cpp  Part.h  README.md  XmlUtils.cpp  XmlUtils.h  tokenize.cpp
data/: 106B-soprano.xml  11909B.xml  206B.xml  22711B.xml  37700B.xml  806B.xml  all-chorales-clean.txt  all-chorales-output..txt  all-chorales-output.txt  all-urls.txt  files.txt  output.txt  phrases.txt  some-urls.txt  test.xml  urls-five-parts.txt  urls.txt
include/: Arguments.h  Chorale.h  CombinedPart.h  Encoding.h  Part.h  TranspositionRule.h
outputs/: 106B-combined-parts.txt  106B-separate-parts.txt  106B-soprano-bass.txt  10707B-separate-parts.txt  37700B-combined-parts.txt  37700B-separate-parts.txt  806B-combined-parts.txt  806B-separate-parts.txt  all-chorales-SB-noeom.txt  all-chorales-SB-per-beat.txt  all-chorales-SB-start-of-beat.txt  all-chorales-chords-noeom.txt  all-chorales-chords-per-beat.txt  all-chorales-chords-start-of-beat.txt  all-chorales-combined-parts.0  all-chorales-combined-parts.txt  all-chorales-separate-parts.0  all-chorales-separate-parts.txt  all-chorales-start-of-beat.txt  bwv_numbers.txt  five-part-chorales-separate-parts.txt  output.txt  two-chorales-separate-parts.txt
src/: Arguments.cpp  Chorale.cpp  CombinedPart.cpp  Encoding.cpp  Part.cpp  XmlUtils.cpp  inputEncodings.cpp  inputXml.cpp
